feat: university details
